# brave-core

./: ALLOW2.md  README.md  package-lock.json  package.json  snapcraft.yaml
android/java/org/chromium/chrome/browser/allow2/: Allow2ApiClientTest.kt  Allow2Bridge.java  Allow2BrowserIntegration.kt  Allow2Constants.kt  Allow2NativeWorker.kt  Allow2ServiceTest.kt  R.kt  sources.gni
android/java/org/chromium/chrome/browser/allow2/models/: Allow2Activity.kt  Allow2CheckResult.kt  Allow2Child.kt  Allow2Credentials.kt  Allow2PairingState.kt
android/java/org/chromium/chrome/browser/allow2/res/drawable/: bg_avatar_circle.xml  bg_qr_code.xml  bg_request_pending.xml  bg_warning_critical.xml  bg_warning_low.xml  bg_warning_medium.xml  ic_block.xml  ic_lock.xml
android/java/org/chromium/chrome/browser/allow2/res/layout/: activity_allow2_block_overlay.xml  activity_allow2_pairing.xml  dialog_allow2_child_select.xml  item_allow2_child.xml  view_allow2_warning_banner.xml
android/java/org/chromium/chrome/browser/allow2/res/values/: colors.xml  strings.xml
android/java/org/chromium/chrome/browser/allow2/res/xml/: allow2_preferences.xml
android/java/org/chromium/chrome/browser/allow2/services/: Allow2ApiClient.kt  Allow2CredentialManager.kt  Allow2Service.kt  Allow2UsageTracker.kt
android/java/org/chromium/chrome/browser/allow2/ui/: Allow2BlockOverlayActivity.kt  Allow2ChildSelectDialog.kt  Allow2PairingActivity.kt  Allow2SettingsFragment.kt  Allow2WarningBanner.kt
android/java/org/chromium/chrome/browser/allow2/ui/compose/: Allow2Theme.kt  BlockOverlayScreen.kt  ChildSelectScreen.kt  PairingScreen.kt
android/java/org/chromium/chrome/browser/allow2/util/: Allow2DeviceInfo.kt  Allow2PinVerifier.kt  Allow2TimeFormatter.kt
android/javatests/org/chromium/chrome/browser/: BytecodeTest.java
app/: brave_command_ids.h  brave_settings_strings.grdp
browser/: brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/allow2/: BUILD.gn  allow2_block_view_delegate.cc  allow2_block_view_delegate.h  allow2_service_factory.cc  allow2_service_factory.h  allow2_tab_helper.cc  allow2_tab_helper.h
browser/allow2/android/: BUILD.gn  allow2_bridge.cc  allow2_bridge.h
browser/android/: brave_shields_content_settings.cc
browser/brave_shields/android/: brave_first_party_storage_cleaner_utils.cc
browser/resources/settings/: brave_routes.ts  sources.gni
browser/resources/settings/br/: basic_page.ts  page_visibility.ts  settings_main.ts  settings_menu.ts
browser/resources/settings/brave_parental_freedom_page/: brave_parental_freedom_browser_proxy.ts  brave_parental_freedom_subpage.html  brave_parental_freedom_subpage.ts
browser/ui/: BUILD.gn
browser/ui/views/allow2/: BUILD.gn  allow2_block_view.cc  allow2_block_view.h  allow2_child_select_view.cc  allow2_child_select_view.h  allow2_grant_entry_view.cc  allow2_grant_entry_view.h  allow2_pairing_view.cc  allow2_pairing_view.h  allow2_voice_code_view.cc  allow2_voice_code_view.h
browser/ui/views/toolbar/: allow2_button.cc  allow2_button.h  brave_toolbar_view.cc  brave_toolbar_view.h
browser/ui/webui/: brave_settings_ui.cc
browser/ui/webui/settings/: brave_parental_freedom_handler.cc  brave_parental_freedom_handler.h  brave_settings_localized_strings_provider.cc
chromium_src/net/tools/transport_security_state_generator/: input_file_parsers.cc
chromium_src/ui/views/window/: dialog_delegate.h
components/: BUILD.gn
components/ai_chat/resources/page/: chat_ui.tsx
components/ai_chat/resources/untrusted_conversation_frame/: untrusted_conversation_frame.tsx
components/allow2/browser/: BUILD.gn  OFFLINE_AUTH_DESIGN.md  allow2_api_client.cc  allow2_api_client.h  allow2_api_client_unittest.cc  allow2_block_overlay.cc  allow2_block_overlay.h  allow2_block_overlay_unittest.cc  allow2_browser_test.cc  allow2_child_manager.cc  allow2_child_manager.h  allow2_child_manager_unittest.cc  allow2_child_shield.cc  allow2_child_shield.h  allow2_child_shield_unittest.cc  allow2_credential_manager.cc  allow2_credential_manager.h  allow2_credential_manager_unittest.cc  allow2_deficit_tracker.cc  allow2_deficit_tracker.h  allow2_integration_test.cc  allow2_local_decision.cc  allow2_local_decision.h  allow2_offline_cache.cc  allow2_offline_cache.h  allow2_offline_crypto.cc  allow2_offline_crypto.h  allow2_offline_crypto_unittest.cc  allow2_pairing_handler.cc  allow2_pairing_handler.h  allow2_pairing_handler_unittest.cc  allow2_qr_code_generator.cc  allow2_qr_code_generator.h  allow2_qr_token.cc  allow2_qr_token.h  allow2_qr_token_unittest.cc  allow2_security_unittest.cc  allow2_service.cc  allow2_service.h  allow2_service_unittest.cc  (+14 more)
components/allow2/common/: BUILD.gn  allow2_constants.h  allow2_utils.cc  allow2_utils.h  allow2_utils_unittest.cc  pref_names.h
components/allow2/docs/: ALLOW2.md  PROFILE_IDENTITY_BINDING.md
components/allow2/resources/: allow2_resources.grdp
components/brave_ads/browser/: ads_service_impl.cc  ads_service_impl.h
components/brave_news/browser/: publishers_controller_unittest.cc
components/brave_rewards/content/: rewards_service_impl.cc
components/brave_wallet/browser/: brave_wallet_utils.cc  brave_wallet_utils_unittest.cc
components/brave_wallet/common/: eth_request_helper.cc
components/os_crypt/: sources.gni
components/resources/: brave_components_resources.grd
components/serp_metrics/: serp_metrics.cc
components/vector_icons/: BUILD.gn
docs/: ALLOW2_BRAVE_INTEGRATION.md
ios/brave-ios/Sources/Brave/Frontend/ParentalFreedom/: Allow2APIClient.swift  Allow2BrowserIntegration.swift  Allow2CheckResult.swift  Allow2Constants.swift  Allow2CredentialManager.swift  Allow2Manager.swift  Allow2PINVerifier.swift  Allow2Preferences.swift  Allow2UsageTracker.swift
ios/brave-ios/Tests/BraveTests/: Allow2APIClientTests.swift  Allow2ServiceTests.swift
ios/browser/flags/: about_flags.mm
test/: BUILD.gn
test/filters/: browser_tests.filter
test/sanitizers/: lsan_suppressions.cfg
(+10 files in other folders)
