# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/config.gni")
import("//build/config/features.gni")

# Core target with factory - no views dependency, safe for //brave/browser/ui
source_set("core") {
  sources = [
    "allow2_service_factory.cc",
    "allow2_service_factory.h",
    "allow2_tab_helper.cc",
    "allow2_tab_helper.h",
  ]

  public_deps = [
    "//brave/components/allow2/browser",
    "//brave/components/allow2/common",
  ]

  deps = [
    "//base",
    "//chrome/browser:browser_process",
    "//chrome/browser/profiles:profile",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//content/public/browser",
    "//services/network/public/cpp",
    "//url",
  ]
}

# Full target including views-dependent code
# NOTE: Do not depend on this from //brave/browser/ui - use :core instead
source_set("allow2") {
  public_deps = [ ":core" ]

  deps = []

  # Desktop Views delegate for block overlay UI.
  if (toolkit_views) {
    sources = [
      "allow2_block_view_delegate.cc",
      "allow2_block_view_delegate.h",
    ]
    deps += [
      "//chrome/browser/ui",
      "//brave/browser/ui/views/allow2",
    ]
  }

  if (is_android) {
    deps += [ "//brave/browser/allow2/android" ]
  }
}
